--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,4 @@
+/*Header CSS */
 header{
   display: flex;
   font-family: Verdana;
@@ -30,4 +31,39 @@ a{
 .logo span{
   color: MediumAquamarine;
   padding-left: 10px;
+}
+
+
+/**/
+
+div{
+  border: 1px solid black;
+}
+
+/**/
+
+/*Main content CSS*/
+main, .column{
+  display: flex;
+}
+main{
+  justify-content: space-between;
+  padding-top: 20px;
+  width: 1232px;
+}
+
+.column{
+  flex-direction: column;
+}
+
+.column.large {
+  width: 630px;
+}
+
+.column.medium {
+  width: 300px;
+}
+
+.column.small {
+  width: 240px;
 }
