--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,8 +5,16 @@ header{
   font-size: 14px;
   font-weight: bold;
   border-bottom: 1px solid black;
+  background-color: white;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  height: 80px;
 }
 
+header nav{
+  padding-right: 30px;
+}
 nav, nav span{
   display: inline-block;
 }
@@ -40,8 +48,10 @@ main, .column{
 }
 main{
   justify-content: space-between;
-  padding-top: 20px;
+  padding-top: 100px;
   width: 1232px;
+  margin-bottom: 80px;
+
 }
 
 .column{
@@ -69,6 +79,7 @@ color: black;
 .image{
   display: flex;
   justify-content: center;
+  align-items: center;
   height: 300px;
   font-family: Georgia;
 font-weight: bold;
@@ -124,4 +135,27 @@ padding: 11px 20px
   font-size: 16px;
 font-weight: bold;
 text-align: center;
+}
+
+
+/** Footer**/
+footer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: MediumAquamarine;
+margin: auto;
+font-family: Verdana;
+font-size: 12px;
+height: 300px;
+}
+
+.title{
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  padding-right: 25px;
+    border-right: 2px solid white;
 }
