--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,15 +1,18 @@
+body{margin:0;}
+
 /*Header CSS */
 header{
   display: flex;
-  font-family: Verdana;
-  font-size: 14px;
-  font-weight: bold;
-  border-bottom: 1px solid black;
-  background-color: white;
-  width: 100%;
+  align-items: center;
   position: fixed;
   z-index: 1;
+  width: 100%;
   height: 80px;
+  border-bottom: 1px solid black;
+  background-color: white;
+  font-family: "Verdana", sans-serif;
+  font-size: 14px;
+  font-weight: bold;
 }
 
 header nav{
@@ -50,8 +53,7 @@ main{
   justify-content: space-between;
   padding-top: 100px;
   width: 1232px;
-  margin-bottom: 80px;
-
+  margin: 0 auto 80px;
 }
 
 .column{
